contacts: simplified html structure of contact, solved a spacing issue

--- a/static/css/apps/contacts.css
+++ b/static/css/apps/contacts.css
@@ -17,6 +17,10 @@
   padding-top: 0.5rem;
 }
 
+.contact-tab-content > *:last-child {
+  margin-bottom: 0;
+}
+
 .contact-top-right a {
   margin-left: 0.5rem;
 }
@@ -149,7 +153,7 @@
   }
 }
 
-.contact-info-section .contact-card {
+.contact-tab-content .contact-card {
   margin-bottom: 0;
 }
 
@@ -197,12 +201,7 @@
   }
 }
 
-/* Contact Info Section */
-.contact-info-section {
-  /* margin-bottom: 1.5rem; */
-}
-
-.contact-info-section .contact-item {
+.contact-tab-content .contact-item {
   display: flex;
   align-items: center;
   padding: 0;
